Fix search spacing and simplify selectors

--- a/app/assets/stylesheets/home.styl
+++ b/app/assets/stylesheets/home.styl
@@ -176,6 +176,12 @@ body.home
       +above(desktop)
         font-size 20px
 
+    ul
+      font-size 21px
+      margin-bottom 20px
+      li
+        margin-bottom 10px
+
 
   /* 2 column grid */
   .col
@@ -184,13 +190,6 @@ body.home
     +above(desktop)
       col(1/2)
 
-
-  /* Larger ul style */
-  ul:not('.top-nav__*')
-    font-size 21px
-    margin-bottom 20px
-    li
-      margin-bottom 10px
 
   /* Total stats */
   .stats-total
